--- a/footy-backend/.env.example
+++ b/footy-backend/.env.example
@@ -1,5 +1,5 @@
 # Database
-MONGO_URI=mongodb+srv://SimhachalamM:Simha10@cluster0.uiobr.mongodb.net/FifaHeros?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=
 
 # Authentication
 JWT_SECRET=your_super_secret_jwt_key_here
